# ready

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.dependencies/: README.md
.github/: pull_request_template.md
.github/workflows/: pre-commit-ci.yaml
configs/: config_inference_unet_with_mobious.yaml  config_train_unet_with_mobious.yaml
configs/apis/: config_facelandmarks.yaml  config_webrtc.yaml  config_webrtc_ready.yaml  plot_losses.yml  plot_performance.yml
configs/files/: config_model_pathfiles.yaml
configs/models/unet/: config_convert_to_onnx_and_simplify_it.yaml  config_inference_unet_with_mobious.yaml  config_train_unet_with_mobious.yaml  config_train_unet_with_openEDS.yaml
data/: README.md
data/bash-scripts/: README.md  conver_grayscale_to_rgb.bash  download_and_process_welgampola_videos.bash  download_shape_predictors.bash  frames_to_mp4_to_gxf.bash  mp4_to_gxf.bash  multi_frames_to_mp4_to_gxf.bash  pngMasks_to_npyLabels.py  process_videos_with_ffmpeg.bash  resize_mobious_dataset.bash
data/benign-positional-vertigo/: README.md
data/mobious/: README.md
data/mobious/api/: README.md
data/mobious/apis/: README.md
data/mobious/models/: README.md  augmentations.md  performance_08-11-24_15-50-18.json  performance_08-11-24_16-38-01.json
data/mobious/sample-frames/: README.md
data/mobious/videos/: README.md
data/novel/: README.md
data/novel/videos/: README.md
data/openEDS/: README.md
data/openEDS/api/: README.md
data/openEDS/models/: README.md
data/openEDS/sample-frames/: README.md  conver-grayscale-to-rgb.bash
data/openEDS/videos/: README.md  frames_to_mp4_to_gxf.bash
data/rti-eyes/: README.md
data/rti-eyes/sample-frames/: README.md  mask-withoutskin-noglasses_0000.tif  mask-withoutskin_0000.tif  mask-withskin_0000.tif  synthethic_0000.tif
data/test-samples/: README.md
data/test-samples/semantic-segmentation-aerial-imagery/: README.md
data/video-tests/acute_vn/: README.md
data/video-tests/benign-positional-vertigo/: README.md
data/webrtc/: README.md
docs/: README.md  cricket.md  launch_container.bash
docs/cricket/: README.md  launch_container_in_cricket.bash
docs/demos/: README.md
docs/hackathons/: README.md
docs/holoscan/: Dockerfile  README.md  apis.md  apis_ready.md  apis_webrtc.md  apis_webrtc_ready.md  byom.md  launch_dev_container.bash
docs/models/: README.md
docs/pose-mobile-human/: README.md
scripts/apis/: facelandmarks_rois.bash  ready_py.bash  v4l2_cam.bash  webrtc.bash  webrtc_ready.bash
scripts/files/: moving_models.bash  tarfiles.bash
scripts/flow_benchmarking/: A_analyse_logfile.bash  B_analyse_bar_plot_avg_datewise.bash  C_app_perf_graph.bash  D_live_app_graph.bash  README.md
scripts/functions/: parse_yaml.bash
scripts/models/: convert_to_onnx_and_simplify_it.bash  inference_unet_with_mobious.bash  rebing_model_NCWH_to_NHWC.bash  train_unet_with_mobious.bash  train_unet_with_openEDS.bash
src/: __init__.py
src/socket_pong/: README.md
tests/: .pylintrc  changes.txt  config_test.yml  convert_to_onnx.py  mobius_dataset.py  test_data_paths.py  test_torch_pipepline.py  test_unetvit.py  test_unetvit_newdata.py
(+51 files in other folders)
