[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ready"
dynamic = ["version", "readme"]
requires-python = ">=3.12"
keywords = ["AI"]
authors = [
  {name = "Miguel Xochicale", email = "add@email.com"},
  {name = "Add co-author", email = "add@email.com"},
]
maintainers = [
  {name = "Add maintener", email = "add@email.com"}
]
description = "Package example!"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
]
[project.optional-dependencies]
# development dependency groups
test = [
    "pytest",
    "pylint",
    "black",
    "isort",
    "codespell",
    "pre-commit"
]
learning = [
    "torch", #2.3.1 local
    "torchvision", #0.18.1 local
    "onnx", #1.16.1  local
]

[tool.setuptools.dynamic]
version = {attr = "ready.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["ready"]  # package names should match these glob patterns (["*"] by default)
#exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
